--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -1,5 +1,5 @@
 .container {
-    width: 50%;
+    width: 60%;
     padding: 50px 0;
     margin: 50px auto;
     position: relative;
@@ -17,13 +17,8 @@
     height: 100%;
     border-radius: 50%;
 }
-.description-exp{
-width: 30rem;
-height: 15rem;
-padding: 50px;
-margin-top: 6rem;
-border-radius: 15px;
-cursor: pointer;
+.work-dec{
+    color: #90a0d9;
 }
 .container:before {
     content: '';
